# src/models/Exam.ts
@@ -1,0 +1,8 @@
+import Semester from './Semester'
+
+export default interface Exam {
+	semester: Semester
+	grade: number
+	passed: boolean
+	examinationDate: Date
+}
