# src/models/ModuleExtract.ts
@@ -1,0 +1,5 @@
+import Exam from './Exam'
+
+export declare class ModuleExtract {
+	exams: Exam[]
+}
