# src/models/Semester.ts
@@ -1,0 +1,4 @@
+export default interface Semester {
+	winter: boolean
+	year: string
+}
