# src/models/Student.ts
@@ -1,0 +1,8 @@
+export default interface Stundent {
+	name: string
+	registration: number
+	birthday: Date
+	degree: string
+	faculty: string
+	address: string
+}
