# src/models/WorkExperience.ts
@@ -1,0 +1,6 @@
+import Semester from './Semester'
+
+export default interface WorkExperience {
+	semester: Semester
+	passed: boolean
+}
