# src/routes/swagger/swagger-config.json
@@ -1,13 +1,203 @@
 {
 	"swagger": "2.0",
 	"info": {
-		"title": "HSD OSSC API",
-		"version": "0.2.0",
-		"description": "Swagger Editor under [https://editor.swagger.io](https://editor.swagger.io)",
+		"version": "0.1.0",
+		"title": "Node OSSC API",
+		"description": "This is an api I made to allow easy access to data provided by the ossc service of the Hochschule Düsseldorf. This project is a hobby project and should be taken as such. I don't take any responsibility for any problems or issues that may occur by using this api. Other then the ip address (traffic analysis / traffic restriction) I don't store any information consumed through this api.\n\nPLEASE BE VERY CAREFUL WITH YOUR CREDENTIALS!\n\nIf you don't feel compftable to use this api, please don't use it!\n\nWith the legal stuff out of the way enjoy using the api.\n\nIf you want to know how I made this hit me up:",
+		"termsOfService": "",
 		"contact": {
 			"email": "andre.kuhlmann@study.hs-duesseldorf.de"
+		},
+		"license": {
+			"name": "Apache 2.0",
+			"url": "https://www.apache.org/licenses/LICENSE-2.0.html"
 		}
 	},
-	"host": "https://ossc.kuhlti.me",
-	"basePath": "/v1"
+	"host": "http://localhost:3000",
+	"basePath": "/",
+	"tags": [
+		{
+			"name": "ossc",
+			"description": ""
+		},
+		{
+			"name": "student",
+			"description": ""
+		}
+	],
+	"schemes": [
+		"http",
+		"https"
+	],
+	"paths": {
+		"/grades": {
+			"get": {
+				"summary": "Get your Grades",
+				"description": "",
+				"tags": [
+					"ossc"
+				],
+				"operationId": "getGrades",
+				"consumes": [
+					"application/json"
+				],
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "Successfull",
+						"schema": {
+							"type": "array",
+							"$ref": "#/definitions/ModuleExtract"
+						}
+					},
+					"401": {
+						"$ref": "#/responses/UnauthorizedError"
+					}
+				},
+				"security": [
+					"ossc_auth"
+				]
+			}
+		},
+		"/student": {
+			"get": {
+				"summary": "Get Student Information",
+				"description": "",
+				"tags": [
+					"student"
+				],
+				"operationId": "getStudentInfo",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "Successfull",
+						"schema": {
+							"type": "object",
+							"$ref": "#/definitions/Student"
+						}
+					},
+					"401": {
+						"$ref": "#/responses/UnauthorizedError"
+					}
+				},
+				"security": [
+					"ossc_auth"
+				]
+			}
+		}
+	},
+	"securityDefinitions": {
+		"ossc_auth": {
+			"type": "basic"
+		}
+	},
+	"definitions": {
+		"ModuleExtract": {
+			"type": "array",
+			"items": {
+				"$ref": "#/definitions/Module"
+			}
+		},
+		"Module": {
+			"type": "object",
+			"properties": {
+				"id": {
+					"type": "number"
+				},
+				"name": {
+					"type": "string"
+				},
+				"passed": {
+					"type": "boolean"
+				},
+				"creditPoints": {
+					"type": "number"
+				},
+				"exams": {
+					"type": "array",
+					"items": {
+						"$ref": "#/definitions/Exam"
+					}
+				},
+				"workExperiences": {
+					"type": "array",
+					"items": {
+						"$ref": "#/definitions/WorkExperience"
+					}
+				}
+			}
+		},
+		"Exam": {
+			"type": "object",
+			"properties": {
+				"grade": {
+					"type": "number"
+				},
+				"passed": {
+					"type": "boolean"
+				},
+				"semester": {
+					"$ref": "#/definitions/Semester"
+				},
+				"examinationDate": {
+					"type": "string"
+				}
+			}
+		},
+		"WorkExperience": {
+			"type": "object",
+			"properties": {
+				"passed": {
+					"type": "boolean"
+				},
+				"semester": {
+					"$ref": "#/definitions/Semester"
+				}
+			}
+		},
+		"Semester": {
+			"type": "object",
+			"properties": {
+				"winter": {
+					"type": "boolean",
+					"description": "Whether or not is was the winter semester."
+				},
+				"year": {
+					"type": "string"
+				}
+			}
+		},
+		"Student": {
+			"type": "object",
+			"properties": {
+				"name": {
+					"type": "string"
+				},
+				"registration": {
+					"type": "number"
+				},
+				"birthday": {
+					"type": "string"
+				},
+				"degree": {
+					"type": "string"
+				},
+				"faculty": {
+					"type": "string"
+				},
+				"address": {
+					"type": "string"
+				}
+			}
+		}
+	},
+	"responses": {
+		"UnauthorizedError": {
+			"description": "Authentication information is missing or invalid"
+		}
+	}
 }
